# cerebro

./: .argon_cache.json  .gitignore  AGENTS.md  ARGON.md  ARGON_PRECISION.txt  ARGON_PRECISION.xml  analyze_long_sim.py  argon_graph.json  cerebro_unico.py  diagnose_spikes.py  optimize_brain.py  requirements.txt  run_comparison_analysis.py  run_long_simulation.py  run_timed_simulation.py
analisis_historico/2026-04-25_IA_Viva_Arena_Darwiniana_V1/: HISTORIA_EVOLUTIVA.md  MANUAL_ARQUITECTURA.md  analyze_brain.py  semilla_cerebro.py
analisis_historico/2026-04-25_IA_Viva_Migracion_V1/: semilla_cerebro.py
analisis_historico/2026-04-25_PROYECTO_IA_VIVA_TRIBU_v15/: HISTORIA_EVOLUTIVA.md  PROYECTO_IA_VIVA.md  semilla_cerebro.py
analisis_historico/2026-04-30_IA_Viva_Arena_Darwiniana_ASISTENTE/: analizar_checkpoint.py  arena_fase1.py  bitacora.py  cuerpo_evolvable.py  depredador.py  morfoma.py  mundo_fisico.py  semilla_cerebro.py  visualizador_fase1.py
cpp_version/: CMakeLists.txt  build.ps1  cerebro.cpp  cerebro.hpp  entorno.cpp  entorno.hpp  hardware_bridge.hpp  main.cpp  server.cpp  server.hpp  virtual_bridge.cpp  virtual_bridge.hpp
legacy/: analyze_sim_results.py  cerebro_brian2.py  check_weights.py  experimentos.py  run_experiments.py  test_feedback_regulation.py
logs/: 1780352571_experimento_01_spikes.csv  A_B_comparison_report.md  cerebro_unico_state.pkl  cerebro_unico_state_final.json
logs/exp2/: 1780352876_exp2_frustracion_cell_events.csv
scratch/: analyze_all_pickles.py  extract_source.py
web_visualizer/: app.js  index.css  index.html  sim_state.json
(+248 files in other folders)
